cluster/apps-archive/default/photoview/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoview
  namespace: photoview
  labels:
    name: photoview
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
spec:
  ingressClassName: nginx
  rules:
    - host: photoview.${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: photoview
                port:
                  number: 80
  tls:
    - hosts:
        - photoview.${DOMAIN}
      secretName: photoview-cert
